# reminder_bot

./: .gitignore  README.md  flake.nix  pyproject.toml  pyvenv.cfg  timers.db
nix/: thoth.nix
src/: start.py
src/thoth/: Timerz.py  commandio.py  databaseio.py  main.py  test.py
thoth/: databaseio.py  main.py  timecalcs.py
